--- a/apps/backend/docker-compose.yml
+++ b/apps/backend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: guitar-shop-backend
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: 12345
+      POSTGRES_PASSWORD: test
       POSTGRES_DB: guitar-shop
     ports:
       - "5432:5432"
